# pyemto

./: .gitignore  LICENSE.txt  README.md  README.rst  contributors.txt  license.html  setup.cfg  setup.py
docs/: Makefile  conf.py  emtoinputs.rst  examples.rst  installation.rst  utilities.rst
docs/_build/doctrees/: EOS.doctree  code.doctree  emtoinputs.doctree  environment.pickle  examples.doctree  index.doctree  (+11 more)
example_projects/fcc_elastic_constants/: CoCrFeMnNi_paramagnetic_fcc.ipynb
example_projects/hcp_equilibrium_volume/: input.py
example_projects/plot_dos/: pyemto_dos.ipynb
pyemto/: Documentation.html  __init__.py  system.py  tags
pyemto/EOS/: EOS.py  __init__.py  asturfit.py
pyemto/c/: c_lattice.c  c_lattice.pyx
pyemto/common/: __init__.py  common.py
pyemto/docs/: code.rst  conf.py  installation.rst
pyemto/emto_parser/: AlCoCrFeNi.ipynb  LICENSE.txt  __init__.py  dos_parser.py  emtoparser.py  pandas_help
pyemto/emtoinputs/: ATOM.cfg  __init__.py  aconf.pckl  batch.py  emtoinputs.py  kfcd.py  kgrn.py
pyemto/examples/: B2_Cr.py  CoCrFeMnNi_fcc.py  L11_CuPt.py  __init__.py  create_L11.py  emto_input_generator.py  fe.py  fe_elastic_constants.py  generate_bcc_fcc_ssos.py  ssos_bcc_fcc.py  ssos_bcc_fcc_structures.txt  structures.py  ti_hcp.py
pyemto/free_energy/: __init__.py  free_energy.py
pyemto/jij/: create_jij_input
pyemto/latticeinputs/: __init__.py  batch.py  bmdl.py  kstr.py  latticeinputs.py  shape.py
pyemto/space_group/: generate_space_group_dics.py  space_groups.txt
pyemto/utilities/: __init__.py  create_aconf_dict.py  utils.py
(+182 files in other folders)
