[metadata]
description-file = README.md
name = pyemto
version = attr: src.VERSION
description = Program to generate input files for EMTO program
long_description = file: README.rst, LICENSE.rst
keywords = EMTO, DFT
license = MIT
classifiers =
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5